package ru.kedroff.project.tasks;

public enum TaskStatuses {
    DONE,
    IN_PROGRESS,
    NEW
}
