package ru.kedroff.project.tasks;

public enum TypeOfTask {
    TASK,
    EPIC,
    SUBTASK
}